# abalone

./: API.md  CMakeLists.txt  CMakeSources.cmake  Makefile  README.md  abalone.cpp  abalone.hpp
include/client/: abaloneInterface.hpp
include/common/: logging.hpp  math.hpp  utils.hpp
include/connect/: apiMessageStream.hpp  connection.hpp  messageStream.hpp  messages.hpp  playerController.hpp  socketStream.hpp  stream.hpp  tcpServer.hpp
include/game/: board.hpp  controller.hpp  move.hpp  position.hpp
include/graphics/: renderer.hpp  textRenderer.hpp
src/: game.cpp
src/common/: logging.cpp  utils.cpp
src/connect/: apiMessageStream.cpp  messages.cpp  socketStream.cpp  tcpServer.cpp
src/game/: board.cpp  controller.cpp  move.cpp  position.cpp
src/graphics/: renderer.cpp  textRenderer.cpp
tools/: generateBitCount.py
